# py-dmm

./: .editorconfig  .env.bak  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.dev.txt  setup.dev.cmd  setup.py
.github_disabled/: README.txt
docs/: use cases.txt
pydtm/: dict_utils.py
src/: data_connection.py  data_object.py  dict_utils.py  glossary.py  mapping.py  run_config.py
src/pydmm/: __init__.py
src/pydmm/utils/upgrade/: data_connection.py
src/pydtm/: __init__.py  data_connection.py  file_loader.py  mapping.py  run_config.py
src/pydtm/models/: README.txt  data_connection.py  mapping.py  run_config.py
src/pydtm/plugins/: __init__.py  data_asserts.py
src/pydtm/utils/: __init__.py  generate_metadata.py  migrate_version.py
src/utils/: generate_metadata.py
src/utils/upgrade/: __init__.py  mapping.py  run_config.py
test/: test_mapping.py
test/resources/: data_connections.yaml
tests/: test.py  test_mapping.py
tests/resources/: data_connections.yaml  mapping.yaml  test_mapping.yaml
