# https://packaging.python.org/en/latest/specifications/#
# https://peps.python.org/pep-0621/
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

# REM (not in pipenv shell): validate-pyproject pyproject.toml

[project]
# metadata-version = "2.3"
name = "pydtm-lib"
version = "0.0.3"
license = {text = "MIT"}
# summary = "Object model for standardising the structure of metadata applicable for mapping from one source data set to a target. Potentially being reshaped during the transfer."
description = "Object model for standardising the structure of metadata applicable for mapping from one source data set to a target. Potentially being reshaped during the transfer."
keywords = ["data pipelines", "data", "pipelines", "metadata"]
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Development Status :: 2 - Pre-Alpha",
]
readme = "README.md"
# home-page = "https://github.com/scott-diprose/pydtm-lib"
requires-python = ">=3.10"
dependencies = [
    # "jsonschema >= 4.4",
    "pyyaml >= 6.0",
    # "lxml >= 4.8.0",
]
# currently dev env handled by pipenv/pipfile
# [project.optional-dependencies]
# dev = []

# [project.scripts]
# migrate_version = "pydtm.util.upgrade:migrate_version"


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 58.0",
    "wheel",
    # "setuptools-scm>=6.2",
]

# [tool.setuptools]
# package-dir = {"" = "src"}
# packages = ["pydtm"]

[tool.setuptools.package-dir]
pydtm = "src/pydtm"
# "pydtm.utils" = "src/utils"
# "pydtm.templating" = "src/templating"

# [tool.setuptools.packages.find]
# where = ["src"]


[tool.pylint.MASTER]
init-hook = "import sys; import os; sys.path.append('src')"
[tool.pylint.STRING]
check-quote-consistency = "yes"
[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "no-member",
]
